Bug 1494490 - Early exit VRManager::RunTasks when not on the VR Listener thread r=daoshengmu

During shutdown, VRManager::RunTasks may be run outside
of the VR Listener thread due to residual nsTimer events.
This results in intermittent assertions during shutdown
when the assert is hit.
We do not need to run these periodic tasks during shutdown
so we can simply early-exit here.

Differential Revision: https://phabricator.services.mozilla.com/D7022